--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta http-equiv="refresh" content="0; url=kaweesak.html">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=kaweesak.html">
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    <p>Redirecting to <a href="kaweesak.html">kaweesak.html</a></p>
+  </body>
+</html>
