--- a/kaweesak.html
+++ b/kaweesak.html
@@ -55,6 +55,11 @@
         <p>Religion: Buddhism</p>
     </div>
 
+    <section>
+        <h4 class="section-title">Professional Summary</h4>
+        <p>A highly experienced IT professional with 20+ years of experience in system analysis, software development, database administration, and project management across telecom, ERP, and CRM industries.</p>
+      </section>
+      
     <!-- Education -->
     <div class="mb-4">
         <h4 class="section-title">Education</h4>
@@ -81,20 +86,21 @@
             <li>
                 <span class="badge bg-secondary">Languages</span>:
                 <ul class="mt-2">
-                  <li><strong>General Purpose :</strong> VB,C#,PHP, Java, Rust, Go, C++</li>
+                  <li><strong>General Purpose :</strong> VB,C#,PHP, Java, Rust, Go, C++,Python</li>
                   <li><strong>Web / Scripting :</strong> JavaScript, TypeScript</li>
-                  <li><strong>Markup / Styling :</strong> HTML, CSS, SASS</li>
+                  <li><strong>Markup / Styling :</strong> HTML, CSS</li>
                   <li><strong>Database :</strong> SQL, PL/SQL</li>
                 </ul>
             </li>
             
-            <li><span class="badge bg-secondary">Frontend</span> React, React Native, Bootstrap, Tailwind</li>  
-            <li><span class="badge bg-secondary">Backend</span> Laravel,CodeIgniter, Node.js, Express.js, WordPress</li>  
-            <li><span class="badge bg-secondary">Databases</span> Oracle,MS-SQL,MySQL,PostgreSQL, MongoDB, DynamoDB, Redis, Firebase</li>  
+            <li><span class="badge bg-secondary">Frontend</span> React, React Native, Next.js, Bootstrap, Tailwind</li>
+            <li><span class="badge bg-secondary">Backend</span> Laravel, CodeIgniter, Node.js, Express.js, WordPress, Spring Boot</li>
+            <li><span class="badge bg-secondary">Databases</span> Oracle,SQL Server,MySQL,PostgreSQL, MongoDB, DynamoDB, Redis, Firebase</li>  
             <li><span class="badge bg-secondary">CI/CD</span> Docker, GitHub Actions</li>  
             <li><span class="badge bg-secondary">Testing</span> Test Scenario, Unit Testing</li>  
             <li><span class="badge bg-secondary">Architecture & Patterns</span> OOP, MVC, Microservices,  Event-Driven,SOAP, REST</li>  
-            <li><span class="badge bg-secondary">Infrastructure & Cloud</span> AWS , API Gateway, RabbitMQ</li>
+            <li><span class="badge bg-secondary">Infrastructure & Cloud</span> AWS ,Digital Ocean API Gateway, RabbitMQ</li>
+            <li><span class="badge bg-secondary">Project Management</span> Jira, Microsoft Project, Asana, Trello, GitHub Projects, Agile/Scrum</li>
         </ul>
     </div>
 
@@ -129,7 +135,7 @@
                     <div class="accordion-body">
                         <ul>
                             <li class="tag-blue">Design System: Insurance Law, Insurance Broker</li>
-                            <li class="tag-blue">Coding: Laravel with MsSQL DB</li>
+                            <li class="tag-blue">Coding: Laravel with SQL Server</li>
                         </ul>
                     </div>
                 </div>
@@ -147,6 +153,7 @@
                 <div id="collapse2" class="accordion-collapse collapse show">
                     <div class="accordion-body">
                         <ul>
+                            <li class="tag-blue"><b>POS System</b></li>
                             <li class="tag-blue">Coding API,Frontend,.NET Core By C#</li>
                             <li class="tag-blue">Coding C# Call Rabbit MQ</li>
                         </ul>
@@ -185,6 +192,7 @@
                 <div id="collapse4" class="accordion-collapse collapse show">
                     <div class="accordion-body">
                         <ul>
+                            <li class="tag-blue"><b>AI-driven trading system</b></li>
                             <li class="tag-blue">Analyze and organize raw data</li>
                             <li class="tag-blue">Build data systems and pipelines</li>
                             <li class="tag-blue">Evaluate business needs and objectives</li>
@@ -350,7 +358,7 @@
                 <div id="collapse11" class="accordion-collapse collapse show">
                     <div class="accordion-body">
                         <ul>
-                            <li class="tag-blue"><b>Project: Telecom Billing</b></li>
+                            <li class="tag-blue"><b></b>This Project support to TT&T (Thai Telephone & Telecommunication)</b></li>
                             <li class="tag-blue">Design system from new requirement</li>
                             <li class="tag-blue">Coding program</li>
                             <li class="tag-blue">Maintenance</li>
@@ -362,6 +370,16 @@
         </div>
     </div>
 </div>
+<footer class="text-center text-muted mt-5 pt-3 border-top">
+    <p class="mb-1">© 2024 Kaweesak Buayarit</p>
+    <p class="mb-0">
+      📧 <a href="mailto:zikee_n10@hotmail.com">zikee_n10@hotmail.com</a> |
+      📞 081-842-4525 |
+      🌐 <a href="https://valgo71.github.io/resume-site/" target="_blank">valgo71.github.io</a>
+    </p>
+    <br>
+  </footer>
+  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
