--- a/kaweesak.html
+++ b/kaweesak.html
@@ -43,6 +43,11 @@
             </div>
             <div>
                 <strong>Contact:</strong> <a href="mailto:zikee_n10@hotmail.com">zikee_n10@hotmail.com</a> | <strong>Tel:</strong> 081-842-4525
+                <br>
+                <strong>GitHub:</strong> 
+                <a href="https://github.com/valgo71" target="_blank">
+                    github.com/valgo71
+                </a>
             </div>
         </div>
     </div>
@@ -104,6 +109,23 @@
         </ul>
     </div>
 
+    <!-- System Analyst Skills -->
+    <div class="mb-4">
+        <h4 class="section-title">System Analyst Skills</h4>
+        <ul class="list-inline">
+        <li class="list-inline-item badge bg-secondary mb-1">Requirement Analysis</li>
+        <li class="list-inline-item badge bg-secondary mb-1">UML Diagrams (Use Case, Class, Activity)</li>
+        <li class="list-inline-item badge bg-secondary mb-1">Data Flow Diagram (DFD)</li>
+        <li class="list-inline-item badge bg-secondary mb-1">ER-Diagram / Data Modeling</li>
+        <li class="list-inline-item badge bg-secondary mb-1">Wireframing & Prototyping</li>
+        <li class="list-inline-item badge bg-secondary mb-1">Business Process Design</li>
+        <li class="list-inline-item badge bg-secondary mb-1">API Specification (REST, Swagger)</li>
+        <li class="list-inline-item badge bg-secondary mb-1">SQL Query for Analysis</li>
+        <li class="list-inline-item badge bg-secondary mb-1">Confluence / Jira</li>
+        <li class="list-inline-item badge bg-secondary mb-1">Cross-team Collaboration</li>
+        </ul>
+    </div>
+  
     <div class="mb-5">
         <h4 class="section-title text-primary">Systems Experience Summary</h4>
         <div class="d-flex flex-wrap gap-2">
